avcodec: fix compilation (fixes #15393)

(This is not tested.)